--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/contact-crawler"]
 	path = lib/contact-crawler
-	url = git@github.com:dounan1/contact-crawler.git
+	url = git://github.com/dounan1/contact-crawler
