--- a/config/database.yml
+++ b/config/database.yml
@@ -15,5 +15,7 @@ test:
   database: contact_mailer_test
 
 production:
-  <<: *default
+  adapter: postgresql
+  username: Rails.application.config.postgres_user
+  password: Rails.application.config.postgres_password
   database: contact_mailer_production
